--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <main>
                 <!--Sidebar section-->
                 <div class="sidebar">
-                <img class="sidebar-img" src="https://i.ytimg.com/vi/i8YQhmMK98U/mqdefault.jpg">
+                <img class="sidebar-img" src="https://i.imgur.com/a/2S81Uqi.jpg">
                 </div>
 
                 <!--Content Section-->
