add index.html file

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <main>
                 <!--Sidebar section-->
                 <div class="sidebar">
-                <img class="sidebar-img" src="https://i.imgur.com/a/2S81Uqi.jpg">
+                <img class="sidebar-img" src="https://github.com/HaykTsh/HaykTsh.github.io/blob/main/File_000.jpeg?raw=true">
                 </div>
 
                 <!--Content Section-->
