--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <main>
                 <!--Sidebar section-->
                 <div class="sidebar">
-                <img class="sidebar-img" src="File_000.jpg">
+                <img class="sidebar-img" src="File_000.jpeg">
                 </div>
 
                 <!--Content Section-->
