--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -33,7 +33,7 @@
     </style>
 
 	<!-- HTML for the box -->
-	<div class="box">?</div>
+	<div class="box">0</div>
 
 	<script>
 		(function(){
@@ -55,7 +55,7 @@
 			
 			// Every time the box is clicked, call the handleBoxClick Function (see below)
             box.on('click', handleBoxClick);
-            board.on('click', misclick);
+            //board.on('click', misclick);
 
 			// moves the Box to a new position on the screen along the X-Axis
 			function moveBoxTo(newPositionX, newPositionY) {
