--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -8,12 +8,13 @@
 		.box {
 			width: 70px;
 			height: 70px;
-            background-image: url(https://i2-prod.mirror.co.uk/incoming/article22647378.ece/ALTERNATES/s1200c/0_2b_Winnie-the-pooh-stickers-and-album-promotion.jpg);
+            background-image: url(https://nyc3.digitaloceanspaces.com/memecreator-cdn/media/__processed__/2da/template-when-the-imposter-is-sus-sus-jerma-1568-0c6db91aec9c.png);
             background-size: 70px 70px;
-			background-color: yellow;
+			background-color:firebrick;
             border-style: solid;
             border-color: palegoldenrod;
 			font-size: 300%;
+            font-family:fantasy;
 			text-align: center;
 			display: block;
 			position: absolute;
@@ -33,7 +34,7 @@
     </style>
 
 	<!-- HTML for the box -->
-	<div class="box">0</div>
+	<div class="box"></div>
 
 	<script>
 		(function(){
