--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -141,7 +141,16 @@
                 clearInterval(interval);
             }
             */
+
+            //TO DO:
+            //
+            //endGame()
+            //Fix clickSpawns
+            //Maybe change color on click
 		})();
 	</script>
 </body>
 </html>
+
+
+
