--- a/projects/Pong/index.html
+++ b/projects/Pong/index.html
@@ -11,7 +11,10 @@
   </head>
   
   <body>
+
+    <p>player1:</p>
     <div id='board'>
+      <h1 id='title'>BallGame&trade;</h1>
       <div id='paddleL' class="paddle"></div>
       <div id='paddleR' class="paddle"></div>
       <div id='scoreL' class="score"></div>
