--- a/projects/Pong/index.html
+++ b/projects/Pong/index.html
@@ -12,14 +12,16 @@
   
   <body>
 
-    <p>player1:</p>
+    <div id="score1" class="score">player1:</div>
+    <div id="score2" class="score">player2:</div>
+
     <div id='board'>
-      <h1 id='title'>BallGame&trade;</h1>
+      <div id="ball"></div>
+      <div id='title'>BallGame&trade;</div>
       <div id='paddleL' class="paddle"></div>
       <div id='paddleR' class="paddle"></div>
       <div id='scoreL' class="score"></div>
       <div id='scoreR' class="score"></div>
-      <div id="ball"></div>
     </div>
   </body>
 </html>
