--- a/projects/Pong/index.html
+++ b/projects/Pong/index.html
@@ -12,8 +12,8 @@
   
   <body>
 
-    <div id="score1" class="score">player1:</div>
-    <div id="score2" class="score">player2:</div>
+    <div id="score1" class="score">Player 1: 0</div>
+    <div id="score2" class="score">Player 2: 0</div>
 
     <div id='board'>
       <div id='title'>BallGame&trade;</div>
