--- a/projects/Pong/index.html
+++ b/projects/Pong/index.html
@@ -12,16 +12,19 @@
   
   <body>
 
-    <div id="score1" class="score">Player 1: 0</div>
-    <div id="score2" class="score">Player 2: 0</div>
-
     <div id='board'>
+
+      <div id="score1" class="score">0</div>
+      <div id="score2" class="score">0</div>
+
       <div id='title'>BallGame&trade;</div>
+
       <div id="ball"></div>
+      <div id="ball2"></div>
+      <div id="ball3"></div>
+
       <div id='paddleL' class="paddle"></div>
       <div id='paddleR' class="paddle"></div>
-      <div id='scoreL' class="score"></div>
-      <div id='scoreR' class="score"></div>
     </div>
   </body>
 </html>
