--- a/projects/Pong/index.html
+++ b/projects/Pong/index.html
@@ -19,9 +19,8 @@
 
       <div id='title'>BallGame&trade;</div>
 
-      <div id="ball"></div>
-      <div id="ball2"></div>
-      <div id="ball3"></div>
+      <div id="ball1" class="ball"></div>
+      <div id="ball2" class="ball"></div>
 
       <div id='paddleL' class="paddle"></div>
       <div id='paddleR' class="paddle"></div>
