--- a/projects/Pong/index.html
+++ b/projects/Pong/index.html
@@ -21,6 +21,7 @@
 
       <div id="ball1" class="ball"></div>
       <div id="ball2" class="ball"></div>
+      <div id="ball3" class="ball"></div>
 
       <div id='paddleL' class="paddle"></div>
       <div id='paddleR' class="paddle"></div>
