--- a/projects/snake/index.html
+++ b/projects/snake/index.html
@@ -11,8 +11,11 @@
   </head>
   
   <body>
+    <h1>SNAKE</h1>
+
     <div id='board'>
-      <div id='gameItem'></div>
+      <div id='apple'></div>
+      <div id='snake' class="head"></div>
     </div>
   </body>
 </html>
