--- a/projects/snake/index.html
+++ b/projects/snake/index.html
@@ -14,7 +14,7 @@
     <h1>SNAKE</h1>
 
     <div id='board'>
-      <div id='apple'></div>
+      <div class='apple'></div>
     </div>
   </body>
 </html>
