--- a/projects/snake/index.html
+++ b/projects/snake/index.html
@@ -11,10 +11,12 @@
   </head>
   
   <body>
-    <h1>SNAKE</h1>
+    <h1 id='title'>SNAKE</h1>
 
     <div id='board'>
       <div class='apple'></div>
+
+      <h1 id="loseMessage"></h1> <!--YOU HAVE LOST - Press "R" to restart-->
     </div>
   </body>
 </html>
