done, just need to comment

--- a/projects/snake/index.html
+++ b/projects/snake/index.html
@@ -16,7 +16,7 @@
     <div id='board'>
       <div class='apple'></div>
 
-      <h1 id="loseMessage"></h1> <!--YOU HAVE LOST - Press "R" to restart-->
+      <h1 id="loseMessage"></h1>
     </div>
   </body>
 </html>
