--- a/portfolio.html
+++ b/portfolio.html
@@ -105,6 +105,7 @@
                         <li><a href="projects/runtime/" target = "_blank">Runtime : A Sidescrolling game featuring Halleb0t</a></li>
                         <li><a href="projects/pong/" target = "_blank">Pong : Table Tennis</a></li>
                         <li><a href="projects/snake/" target = "_blank">Snake : Eat food to grow and gain points</a></li>
+                        <li><a href="projects/space-invaders/" target = "_blank">Space Invaders : Kill aliens</a></li>
                     </ul>
                 </div>
             </main>
