--- a/projects/space-invaders/index.html
+++ b/projects/space-invaders/index.html
@@ -12,6 +12,8 @@
     <body>
 
         <div class="grid"></div>
+        <h1 id="result"></h1>
+
         <script src="app.js"></script>
     </body>
 </html>
