--- a/projects/space-invaders/index.html
+++ b/projects/space-invaders/index.html
@@ -12,7 +12,7 @@
     <body>
 
         <div class="grid"></div>
-        <h1 id="result"></h1>
+        <h1 id="result">0</h1>
 
         <script src="app.js"></script>
     </body>
